--- a/assets/footer/style.css
+++ b/assets/footer/style.css
@@ -6,8 +6,15 @@
 	color: #0a0a0a;
 	text-align: left;
 	font: bold 16px sans-serif;
-	padding: 55px 50px;
+	padding: 25px 40px;
+	display: flex;
+	align-items: center;
+	flex-wrap: nowrap;
+
+	flex-direction: row;
+	justify-content: space-evenly;
 }
+
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
@@ -89,6 +96,7 @@
   font-weight:400;
 	vertical-align: middle;
 	margin:0;
+	font-size: medium;
 }
 
 .footer-distributed .footer-center p span{
@@ -128,6 +136,7 @@
 	color:  #92999f;
 	font-size: 13px;
 	font-weight: normal;
+	font-size: medium;
 	margin: 0;
 }
 
@@ -135,6 +144,7 @@
 	display: block;
 	color:  #0a0a0a;
 	font-size: 14px;
+	font-size: large;
 	font-weight: bold;
 	margin-bottom: 20px;
 }
