--- a/forms.css
+++ b/forms.css
@@ -56,7 +56,7 @@ body {
   transition: 1s cubic-bezier(0.4, 0.1, 0.4, 1)   !important;
 }
 
-a {
+button {
   text-decoration: none;
 }
 
@@ -239,7 +239,7 @@ header ul {
   font-size: 1rem;
 }
 
-.text a {
+.text  {
   color: var(--main-color);
   transition: 0.3s;
 }
@@ -373,7 +373,7 @@ textarea.contact-input ~ .icon {
 
 }
 
-.wrapper a{
+.wrapper button{
   display: block;
   width: 250px;
   height: 50px;
@@ -381,8 +381,8 @@ textarea.contact-input ~ .icon {
   text-decoration: none;
   text-align: center;
   border-radius: 50px;
-  border: 3px solid #ADD8E6;
-  color: #ADD8E6;
+  border: 3px solid #80cae3;
+  color: #77cbe7;
   font-size: 20px;
   font-family: arial;
   position: relative;
@@ -392,36 +392,39 @@ textarea.contact-input ~ .icon {
   transition: all .35s;
 }
 
-.wrapper a:before,
-.wrapper a:after{
+.wrapper  button:before,
+.wrapper button:after{
   position: absolute;
   content: "";
   width: 100%;
   height: 100%;
   top: -100%;
   left: 0;
-  background: #ADD8E6;
+  background: #77cbe7;
   z-index: -1;
   transition: all .35s;
 }
 
-.wrapper a:before{
+.wrapper button:before{
   opacity: .5;
 }
 
-.wrapper a:after{
+.wrapper button:after{
   transition-delay: .2s;
 }
 
-.wrapper a:hover{
+.wrapper button:hover{
   color: #fff;
 }
 
-.wrapper a:hover:before,
-.wrapper a:hover:after{
+.wrapper button:hover:before,
+.wrapper button:hover:after{
   top: 0;
 }
   
+.wrapper button:disabled{
+  background-color: #4e7d8d;
+}
 
 
 
